@@ -42,6 +42,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22353) Categorised recent changes now works again
 
 == API changes in 1.17 ==
+* (bug 22738) Allow filtering by action type on query=logevent
 
 === Languages updated in 1.17 ===
 
